--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
           </div>
           <img class="img-right" src="img/real-city.jpg" width="800" height="400" alt="Фото города Седона">
           <ul>
-            <li class="nested-list">
+            <li class="nested-list-1">
               <h3>Жильё</h3>
               <p>Рекомендуем пожить в настоящем мотеле, всё как в кино</p>
             </li>
-            <li class="nested-list">
+            <li class="nested-list-2">
               <h3>Еда</h3>
               <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
-            <li class="nested-list">
+            <li class="nested-list-3">
               <h3>Сувениры</h3>
               <p>Не только китайского, но и местного производства!</p>
             </li>
@@ -74,17 +74,17 @@
           </div>
           <img class="img-left" src="img/devil-canyon.jpg" width="800" height="400" alt="Фото дьявольского моста">
         </li>
-        <li class="trio">
+        <li class="trio-1">
           <h3>Небольшая площадь</h3>
           <p>-№3-</p>
           <p>Все достопримечательности находятся очень близко</p>
         </li>
-        <li class="trio">
+        <li class="trio-2">
           <h3>Красивая дорога</h3>
           <p>-№4-</p>
           <p>Ехать в седону из лас-вегаса совсем не скучно!</p>
         </li>
-        <li class="trio">
+        <li class="trio-3">
           <h3>Мало туристов</h3>
           <p>-№5-</p>
           <p>Большинство едет в гранд каньон и толпится там</p>
@@ -99,7 +99,7 @@
 
     <div>
       <button type="button">Поиск гостиницы в Седоне</button>
-      <form class="user visually-hidden" method="get" action="https://echo.htmlacademy.ru">
+      <form class="user" method="get" action="https://echo.htmlacademy.ru">
         <p>
           <label for="date-in">Дата заезда</label>
           <input type="text" id="date-in" name="in" placeholder="2017-04-22">
@@ -137,15 +137,15 @@
       <a href="tel:74956660266">тел:+7(495)666-02-66</a>
     </p>
 
-    <ul class="social-link">
+    <ul>
       <li>
-        <a href="" class="twiter" aria-label="Твиттер"></a>
+        <a class="social-link-1" href="" aria-label="Твиттер"></a>
       </li>
       <li>
-        <a href="" class="facebook" aria-label="Фейсбук"></a>
+        <a class="social-link-2" href="" aria-label="Фейсбук"></a>
       </li>
       <li>
-        <a href="" class="youtube" aria-label="Ютуб"></a>
+        <a class="social-link-3" href="" aria-label="Ютуб"></a>
       </li>
     </ul>
 
