--- a/hotels.html
+++ b/hotels.html
@@ -35,7 +35,7 @@
     <h1 class="visually-hidden">Перечень мест для проживания</h1>
     <div>
       <h2 class="visually-hidden">Фильтр жилья</h2>
-      <form class="user" method="get" action="https://echo.htmlacademy.ru">
+      <form class="user-hotet" method="get" action="https://echo.htmlacademy.ru">
         <fieldset>
           <legend>Инфраструктура:</legend>
           <ul>
@@ -82,7 +82,7 @@
         <button type="submit">Показать</button>
       </form>
 
-      <p>Cортировка:</p>>
+      <p>Cортировка:</p>
       <ul>
         <li>
           <a href="">По цене</a>
@@ -104,13 +104,13 @@
       <h2>
         <a href="">Amara resort & spa</a>
       </h2>
-      <p>
+      <p class="weight-400">
         <span>Гостиница</span> От 4000 ₽.
       </p>
-      <a href="">Подробнее</a>
-      <a href="">Забронировать</a>
-      <p>Четыре звезды</p>
-      <p>Рейтинг:8,5</p>
+      <a class="detail" href="">Подробнее</a>
+      <a class="order" href="">Забронировать</a>
+      <p class="stars-1">Четыре звезды</p>
+      <p class="raiting">Рейтинг:8,5</p>
     </article>
 
     <article>
@@ -118,13 +118,13 @@
       <h2>
         <a href="">Desert quail inn</a>
       </h2>
-      <p>
+      <p class="tipe-cost">
         <span>Мотель</span> От 3000 ₽.
       </p>
-      <a href="">Подробнее</a>
-      <a href="">Забронировать</a>
-      <p>Три звезды</p>
-      <p>Рейтинг:8,9</p>
+      <a class="detail" href="">Подробнее</a>
+      <a class="order" href="">Забронировать</a>
+      <p class="stars-2">Три звезды</p>
+      <p class="raiting">Рейтинг:8,9</p>
     </article>
 
     <article>
@@ -132,18 +132,18 @@
       <h2>
         <a href="">Villas at poco diablo</a>
       </h2>
-      <p>
+      <p class="weight-400">
         <span>Апартаменты</span> ОТ 2000 ₽.
       </p>
-      <a href="">Подробнее</a>
-      <a href="">Забронировать</a>
-      <p> Две звезды</p>
-      <p>Рейтинг:9,5</p>
+      <a class="detail" href="">Подробнее</a>
+      <a class="order" href="">Забронировать</a>
+      <p class="stars-3"> Две звезды</p>
+      <p class="raiting">Рейтинг:9,5</p>
     </article>
 
   </main>
   <footer>
-    <p>#visitsedona
+    <p class="telefone">#visitsedona
       <a href="tel:74956660266">тел:+7(495)666-02-66</a>
     </p>
 
@@ -159,7 +159,7 @@
       </li>
     </ul>
 
-    <p>website by
+    <p class="on-academy">website by
       <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Ссылка на академию"></a>
     </p>
   </footer>
