--- a/hotels.html
+++ b/hotels.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <nav>
+    <nav class="navigation">
       <ul>
         <li>
           <a href="">Информация</a>
@@ -35,7 +35,7 @@
     <h1 class="visually-hidden">Перечень мест для проживания</h1>
     <div>
       <h2 class="visually-hidden">Фильтр жилья</h2>
-      <form class="user-hotet" method="get" action="https://echo.htmlacademy.ru">
+      <form method="get" action="https://echo.htmlacademy.ru">
         <fieldset>
           <legend>Инфраструктура:</legend>
           <ul>
@@ -104,12 +104,12 @@
       <h2>
         <a href="">Amara resort & spa</a>
       </h2>
-      <p class="weight-400">
+      <p class="type-cost">
         <span>Гостиница</span> От 4000 ₽.
       </p>
       <a class="detail" href="">Подробнее</a>
       <a class="order" href="">Забронировать</a>
-      <p class="stars-1">Четыре звезды</p>
+      <p class="stars four">Четыре звезды</p>
       <p class="raiting">Рейтинг:8,5</p>
     </article>
 
@@ -118,12 +118,12 @@
       <h2>
         <a href="">Desert quail inn</a>
       </h2>
-      <p class="tipe-cost">
+      <p class="type-cost">
         <span>Мотель</span> От 3000 ₽.
       </p>
       <a class="detail" href="">Подробнее</a>
       <a class="order" href="">Забронировать</a>
-      <p class="stars-2">Три звезды</p>
+      <p class="star three">Три звезды</p>
       <p class="raiting">Рейтинг:8,9</p>
     </article>
 
@@ -137,13 +137,13 @@
       </p>
       <a class="detail" href="">Подробнее</a>
       <a class="order" href="">Забронировать</a>
-      <p class="stars-3"> Две звезды</p>
+      <p class="stars two"> Две звезды</p>
       <p class="raiting">Рейтинг:9,5</p>
     </article>
 
   </main>
   <footer>
-    <p class="telefone">#visitsedona
+    <p class="telephone">#visitsedona
       <a href="tel:74956660266">тел:+7(495)666-02-66</a>
     </p>
 
@@ -159,7 +159,7 @@
       </li>
     </ul>
 
-    <p class="on-academy">website by
+    <p class="academy-link">website by
       <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Ссылка на академию"></a>
     </p>
   </footer>
