--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="inner-page">
   <header>
-    <nav>
+    <nav class="navigation">
       <ul>
         <li class="nav-left">
           <a href="">Информация</a>
@@ -29,7 +29,7 @@
       <a href="index.html">
         <img class="logo" src="img/logo-sedona.svg" width="100" height="50" alt="Лого">
       </a>
-    </nav>
+    </nav class="navigation">
   </header>
   <main>
     <div class="intro">
@@ -45,46 +45,46 @@
       <h2 class="visually-hidden">Преимущесва</h2>
       <ul>
         <li>
-          <div class="float-left">
+          <div class="first-reason">
             <h3>Настоящий городок</h3>
             <p>-№1-</p>
             <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
           </div>
-          <img class="img-right" src="img/real-city.jpg" width="800" height="400" alt="Фото города Седона">
+          <img class="img-first-reason" src="img/real-city.jpg" width="800" height="400" alt="Фото города Седона">
           <ul>
-            <li class="nested-list-1">
+            <li class="nested-list">
               <h3>Жильё</h3>
               <p>Рекомендуем пожить в настоящем мотеле, всё как в кино</p>
             </li>
-            <li class="nested-list-2">
+            <li class="nested-list">
               <h3>Еда</h3>
               <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
-            <li class="nested-list-3">
+            <li class="nested-list">
               <h3>Сувениры</h3>
               <p>Не только китайского, но и местного производства!</p>
             </li>
           </ul>
         </li>
         <li>
-          <div class="float-right">
+          <div class="second-reason">
             <h3>Там есть<br> мост дьявола</h3>
             <p>-№2-</p>
             <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </div>
-          <img class="img-left" src="img/devil-canyon.jpg" width="800" height="400" alt="Фото дьявольского моста">
+          <img class="img-second-reason" src="img/devil-canyon.jpg" width="800" height="400" alt="Фото дьявольского моста">
         </li>
-        <li class="trio-1">
+        <li class="other-reasons">
           <h3>Небольшая площадь</h3>
           <p>-№3-</p>
           <p>Все достопримечательности находятся очень близко</p>
         </li>
-        <li class="trio-2">
+        <li class="other-reasons">
           <h3>Красивая дорога</h3>
           <p>-№4-</p>
           <p>Ехать в седону из лас-вегаса совсем не скучно!</p>
         </li>
-        <li class="trio-3">
+        <li class="other-reasons">
           <h3>Мало туристов</h3>
           <p>-№5-</p>
           <p>Большинство едет в гранд каньон и толпится там</p>
@@ -98,7 +98,7 @@
     </div>
 
     <div>
-      <button type="button">Поиск гостиницы в Седоне</button>
+      <button class="search" type="button">Поиск гостиницы в Седоне</button>
       <form class="user" method="get" action="https://echo.htmlacademy.ru">
         <p>
           <label for="date-in">Дата заезда</label>
@@ -133,23 +133,23 @@
 
   </main>
   <footer>
-    <p class="telefone">#visitsedona
+    <p class="telephone">#visitsedona
       <a href="tel:74956660266">тел:+7(495)666-02-66</a>
     </p>
 
-    <ul>
+    <ul class="social-link">
       <li>
-        <a class="social-link-1" href="" aria-label="Твиттер"></a>
+        <a class="twitter" href="" aria-label="Твиттер"></a>
       </li>
       <li>
-        <a class="social-link-2" href="" aria-label="Фейсбук"></a>
+        <a class="facebook" href="" aria-label="Фейсбук"></a>
       </li>
       <li>
-        <a class="social-link-3" href="" aria-label="Ютуб"></a>
+        <a class="youtube" href="" aria-label="Ютуб"></a>
       </li>
     </ul>
 
-    <p class="on-academy">website by
+    <p class="academy-link">website by
       <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Ссылка на академию"></a>
     </p>
   </footer>
