no global,rework class

--- a/hotels.html
+++ b/hotels.html
@@ -12,18 +12,18 @@
 <body>
   <header>
     <nav class="navigation">
-      <ul>
+      <ul class="no-selection">
         <li>
-          <a href="">Информация</a>
+          <a class="link" href="">Информация</a>
         </li>
         <li>
-          <a href="">Фото и Видео</a>
+          <a class="link" href="">Фото и Видео</a>
         </li>
         <li>
-          <a href="">Карта штата</a>
+          <a class="link" href="">Карта штата</a>
         </li>
         <li>
-          <a href="hotels.html">Гостиницы</a>
+          <a class="link" href="hotels.html">Гостиницы</a>
         </li>
       </ul>
       <a href="index.html">
@@ -35,10 +35,10 @@
     <h1 class="visually-hidden">Перечень мест для проживания</h1>
     <div>
       <h2 class="visually-hidden">Фильтр жилья</h2>
-      <form method="get" action="https://echo.htmlacademy.ru">
+      <form class="user" method="get" action="https://echo.htmlacademy.ru">
         <fieldset>
           <legend>Инфраструктура:</legend>
-          <ul>
+          <ul class="no-selection">
             <li>
               <input type="checkbox" name="pool" id="inf-pool" value="pool" checked>
               <label for="inf-pool">Бассейн</label>
@@ -56,7 +56,7 @@
 
         <fieldset>
           <legend>Тип жилья:</legend>
-          <ul>
+          <ul class="no-selection">
             <li>
               <input type="checkbox" name="hotel" id="type-hotel" value="hotel" checked>
               <label for="type-hotel">Гостиница</label>
@@ -83,84 +83,84 @@
       </form>
 
       <p>Cортировка:</p>
-      <ul>
+      <ul class="no-selection">
         <li>
-          <a href="">По цене</a>
+          <a class="link" href="">По цене</a>
         </li>
         <li>
-          <a href="">По типу</a>
+          <a class="link" href="">По типу</a>
         </li>
         <li>
-          <a href="">По рейтингу</a>
+          <a class="link" href="">По рейтингу</a>
         </li>
       </ul>
-      <a href="" aria-label="вверх по списку"></a>
-      <a href="" aria-label="вниз по списку"></a>
+      <a class="link" href="" aria-label="вверх по списку"></a>
+      <a class="link" href="" aria-label="вниз по списку"></a>
 
     </div>
 
     <article>
       <img src="img/amara.jpg" width="135" height="90" alt="Фото гостиницы Amara resort & spa">
       <h2>
-        <a href="">Amara resort & spa</a>
+        <a class="link" href="">Amara resort & spa</a>
       </h2>
-      <p class="type-cost">
+      <p class="regular">
         <span>Гостиница</span> От 4000 ₽.
       </p>
-      <a class="detail" href="">Подробнее</a>
-      <a class="order" href="">Забронировать</a>
+      <a class="link detail" href="">Подробнее</a>
+      <a class="link order" href="">Забронировать</a>
       <p class="stars four">Четыре звезды</p>
-      <p class="raiting">Рейтинг:8,5</p>
+      <p class="regular">Рейтинг:8,5</p>
     </article>
 
     <article>
       <img src="img/desert.jpg" width="135" height="90" alt="Фото мотеля Desert quail inn">
       <h2>
-        <a href="">Desert quail inn</a>
+        <a class="link" href="">Desert quail inn</a>
       </h2>
-      <p class="type-cost">
+      <p class="regular">
         <span>Мотель</span> От 3000 ₽.
       </p>
-      <a class="detail" href="">Подробнее</a>
-      <a class="order" href="">Забронировать</a>
+      <a class="link detail" href="">Подробнее</a>
+      <a class="link order" href="">Забронировать</a>
       <p class="star three">Три звезды</p>
-      <p class="raiting">Рейтинг:8,9</p>
+      <p class="regular">Рейтинг:8,9</p>
     </article>
 
     <article>
       <img src="img/villas.jpg" width="135" height="90" alt="Фото апартаментов Villas at poco diablo">
       <h2>
-        <a href="">Villas at poco diablo</a>
+        <a class="link" href="">Villas at poco diablo</a>
       </h2>
-      <p class="weight-400">
+      <p class="regular">
         <span>Апартаменты</span> ОТ 2000 ₽.
       </p>
-      <a class="detail" href="">Подробнее</a>
-      <a class="order" href="">Забронировать</a>
+      <a class="link detail" href="">Подробнее</a>
+      <a class="link order" href="">Забронировать</a>
       <p class="stars two"> Две звезды</p>
-      <p class="raiting">Рейтинг:9,5</p>
+      <p class="regular">Рейтинг:9,5</p>
     </article>
 
   </main>
   <footer>
     <p class="telephone">#visitsedona
-      <a href="tel:74956660266">тел:+7(495)666-02-66</a>
+      <a class="link"href="tel:74956660266">тел:+7(495)666-02-66</a>
     </p>
 
-    <ul>
+    <ul class="no-selection">
       <li>
-        <a href="" aria-label="Твиттер"></a>
+        <a class="link twitter" href="" aria-label="Твиттер"></a>
       </li>
       <li>
-        <a href="" aria-label="Фейсбук"></a>
+        <a class="link facebook" href="" aria-label="Фейсбук"></a>
       </li>
       <li>
-        <a href="" aria-label="Ютуб"></a>
+        <a class="link youtube" href="" aria-label="Ютуб"></a>
       </li>
     </ul>
 
     <p class="academy-link">website by
-      <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Ссылка на академию"></a>
+      <a class="link" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Ссылка на академию"></a>
     </p>
   </footer>
 </body>
