--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 <body class="inner-page">
   <header>
     <nav class="navigation">
-      <ul>
+      <ul class="no-selection">
         <li class="nav-left">
-          <a href="">Информация</a>
+          <a class="link" href="">Информация</a>
         </li>
         <li class="nav-left">
-          <a href="">Фото и Видео</a>
+          <a class="link" href="">Фото и Видео</a>
         </li>
         <li class="nav-right">
-          <a href="">Карта штата</a>
+          <a class="link" href="">Карта штата</a>
         </li>
         <li class="nav-right">
-          <a href="hotels.html">Гостиницы</a>
+          <a class="link" href="hotels.html">Гостиницы</a>
         </li>
       </ul>
       <a href="index.html">
@@ -37,57 +37,57 @@
     </div>
 
     <div class="heading">
-      <h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+      <h1 class="main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
       <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
     </div>
 
     <section>
       <h2 class="visually-hidden">Преимущесва</h2>
-      <ul>
+      <ul class="no-selection">
         <li>
           <div class="first-reason">
-            <h3>Настоящий городок</h3>
-            <p>-№1-</p>
-            <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+            <h3 class="reason-title">Настоящий городок</h3>
+            <p class="regular">-№1-</p>
+            <p class="regular">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
           </div>
           <img class="img-first-reason" src="img/real-city.jpg" width="800" height="400" alt="Фото города Седона">
-          <ul>
+          <ul class="no-selection">
             <li class="nested-list">
-              <h3>Жильё</h3>
-              <p>Рекомендуем пожить в настоящем мотеле, всё как в кино</p>
+              <h3 class="reason-title">Жильё</h3>
+              <p class="regular">Рекомендуем пожить в настоящем мотеле, всё как в кино</p>
             </li>
             <li class="nested-list">
-              <h3>Еда</h3>
-              <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              <h3 class="reason-title">Еда</h3>
+              <p class="regular">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="nested-list">
-              <h3>Сувениры</h3>
-              <p>Не только китайского, но и местного производства!</p>
+              <h3 class="reason-title">Сувениры</h3>
+              <p class="regular">Не только китайского, но и местного производства!</p>
             </li>
           </ul>
         </li>
         <li>
           <div class="second-reason">
-            <h3>Там есть<br> мост дьявола</h3>
-            <p>-№2-</p>
-            <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+            <h3 class="reason-title">Там есть<br> мост дьявола</h3>
+            <p class="regular">-№2-</p>
+            <p class="regular">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </div>
           <img class="img-second-reason" src="img/devil-canyon.jpg" width="800" height="400" alt="Фото дьявольского моста">
         </li>
         <li class="other-reasons">
-          <h3>Небольшая площадь</h3>
-          <p>-№3-</p>
-          <p>Все достопримечательности находятся очень близко</p>
+          <h3 class="reason-title">Небольшая площадь</h3>
+          <p class="regular">-№3-</p>
+          <p class="regular">Все достопримечательности находятся очень близко</p>
         </li>
         <li class="other-reasons">
-          <h3>Красивая дорога</h3>
-          <p>-№4-</p>
-          <p>Ехать в седону из лас-вегаса совсем не скучно!</p>
+          <h3 class="reason-title">Красивая дорога</h3>
+          <p class="regular">-№4-</p>
+          <p class="regular">Ехать в седону из лас-вегаса совсем не скучно!</p>
         </li>
         <li class="other-reasons">
-          <h3>Мало туристов</h3>
-          <p>-№5-</p>
-          <p>Большинство едет в гранд каньон и толпится там</p>
+          <h3 class="reason-title">Мало туристов</h3>
+          <p class="regular">-№5-</p>
+          <p class="regular">Большинство едет в гранд каньон и толпится там</p>
         </li>
       </ul>
     </section>
@@ -99,7 +99,7 @@
 
     <div>
       <button class="search" type="button">Поиск гостиницы в Седоне</button>
-      <form class="user" method="get" action="https://echo.htmlacademy.ru">
+      <form class="user none" method="get" action="https://echo.htmlacademy.ru">
         <p>
           <label for="date-in">Дата заезда</label>
           <input type="text" id="date-in" name="in" placeholder="2017-04-22">
@@ -134,23 +134,23 @@
   </main>
   <footer>
     <p class="telephone">#visitsedona
-      <a href="tel:74956660266">тел:+7(495)666-02-66</a>
+      <a class="link" href="tel:74956660266">тел:+7(495)666-02-66</a>
     </p>
 
-    <ul class="social-link">
+    <ul class="no-selection">
       <li>
-        <a class="twitter" href="" aria-label="Твиттер"></a>
+        <a class="link twitter" href="" aria-label="Твиттер"></a>
       </li>
       <li>
-        <a class="facebook" href="" aria-label="Фейсбук"></a>
+        <a class="link facebook" href="" aria-label="Фейсбук"></a>
       </li>
       <li>
-        <a class="youtube" href="" aria-label="Ютуб"></a>
+        <a class="link youtube" href="" aria-label="Ютуб"></a>
       </li>
     </ul>
 
     <p class="academy-link">website by
-      <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Ссылка на академию"></a>
+      <a class="link" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Ссылка на академию"></a>
     </p>
   </footer>
 </body>
