--- a/hotels.html
+++ b/hotels.html
@@ -33,57 +33,68 @@
   </header>
   <main>
     <h1 class="visually-hidden">Перечень мест для проживания</h1>
-    <div>
-      <h2 class="visually-hidden">Фильтр жилья</h2>
-      <form class="user" method="get" action="https://echo.htmlacademy.ru">
-        <fieldset>
-          <legend>Инфраструктура:</legend>
-          <ul class="no-selection">
-            <li>
-              <input type="checkbox" name="pool" id="inf-pool" value="pool" checked>
-              <label for="inf-pool">Бассейн</label>
-            </li>
-            <li>
-              <input type="checkbox" name="parking" id="inf-parking" value="parking">
-              <label for="inf-parking">Парковка</label>
-            </li>
-            <li>
-              <input type="checkbox" name="wi-fi" id="inf-wi-fi" value="wi-fi">
-              <label for="inf-wi-fi">Wi-fi</label>
-            </li>
-          </ul>
-        </fieldset>
+    <div class="filter-widht">
+      <div class="filter">
+        <h2 class="visually-hidden">Фильтр жилья</h2>
+        <div class="block">
+          <form class="user" method="get" action="https://echo.htmlacademy.ru">
+            <fieldset class="no-border ">
+              <legend>Инфраструктура:</legend>
+              <ul class="no-selection">
+                <li>
+                  <input type="checkbox" name="pool" id="inf-pool" value="pool" checked>
+                  <label for="inf-pool">Бассейн</label>
+                </li>
+                <li>
+                  <input type="checkbox" name="parking" id="inf-parking" value="parking">
+                  <label for="inf-parking">Парковка</label>
+                </li>
+                <li>
+                  <input type="checkbox" name="wi-fi" id="inf-wi-fi" value="wi-fi">
+                  <label for="inf-wi-fi">Wi-fi</label>
+                </li>
+              </ul>
+            </fieldset>
+        </div>
 
-        <fieldset>
-          <legend>Тип жилья:</legend>
-          <ul class="no-selection">
-            <li>
-              <input type="checkbox" name="hotel" id="type-hotel" value="hotel" checked>
-              <label for="type-hotel">Гостиница</label>
-            </li>
-            <li>
-              <input type="checkbox" name="motel" id="type-motel" value="motel" checked>
-              <label for="type-motel">Мотель</label>
-            </li>
-            <li>
-              <input type="checkbox" name="apartments" id="type-apartments" value="apartments" checked>
-              <label for="type-apartments">Апартаменты</label>
-            </li>
-          </ul>
-        </fieldset>
+        <div class="block">
+          <fieldset class="no-border block">
+            <legend>Тип жилья:</legend>
+            <ul class="no-selection">
+              <li>
+                <input type="checkbox" name="hotel" id="type-hotel" value="hotel" checked>
+                <label for="type-hotel">Гостиница</label>
+              </li>
+              <li>
+                <input type="checkbox" name="motel" id="type-motel" value="motel" checked>
+                <label for="type-motel">Мотель</label>
+              </li>
+              <li>
+                <input type="checkbox" name="apartments" id="type-apartments" value="apartments" checked>
+                <label for="type-apartments">Апартаменты</label>
+              </li>
+            </ul>
+          </fieldset>
+        </div>
 
-        <fieldset>
-          <legend>Стоимость в сутки(₽)</legend>
-          <label for="flying">От 0 | до</label>
-          <output for="flying" name="level">0</output>
-          <input name="flevel" id="flying" type="range" min="0" max="5000" value="0">
 
-        </fieldset>
-        <button type="submit">Показать</button>
+        <div class="block">
+          <fieldset class="no-border block">
+            <legend>Стоимость в сутки(₽)</legend>
+            <label for="flying">От 0 | до</label>
+            <output for="flying" name="level">0</output>
+            <input name="flevel" id="flying" type="range" min="0" max="5000" value="0">
+
+          </fieldset>
+          <button type="submit">Показать</button>
+        </div>
+      </div>
       </form>
+    </div>
 
+    <div class="flex">
       <p>Cортировка:</p>
-      <ul class="no-selection">
+      <ul class="no-selection flex">
         <li>
           <a class="link" href="">По цене</a>
         </li>
@@ -96,55 +107,68 @@
       </ul>
       <a class="link" href="" aria-label="вверх по списку"></a>
       <a class="link" href="" aria-label="вниз по списку"></a>
-
     </div>
 
-    <article>
-      <img src="img/amara.jpg" width="135" height="90" alt="Фото гостиницы Amara resort & spa">
-      <h2>
-        <a class="link" href="">Amara resort & spa</a>
-      </h2>
-      <p class="regular">
-        <span>Гостиница</span> От 4000 ₽.
-      </p>
-      <a class="link detail" href="">Подробнее</a>
-      <a class="link order" href="">Забронировать</a>
-      <p class="stars four">Четыре звезды</p>
-      <p class="regular">Рейтинг:8,5</p>
-    </article>
+    <div class="rest">
+      <article class="flex">
+        <img src="img/amara.jpg" width="135" height="90" alt="Фото гостиницы Amara resort & spa">
+        <div class="block">
+          <h2>
+            <a class="link" href="">Amara resort & spa</a>
+          </h2>
+          <p class="regular">
+            <span>Гостиница</span> От 4000 ₽.
+          </p>
+          <a class="link detail" href="">Подробнее</a>
+          <a class="link order" href="">Забронировать</a>
+        </div>
+        <div class="block">
+          <p class="stars four">Четыре звезды</p>
+          <p class="regular">Рейтинг:8,5</p>
+        </div>
+      </article>
 
-    <article>
-      <img src="img/desert.jpg" width="135" height="90" alt="Фото мотеля Desert quail inn">
-      <h2>
-        <a class="link" href="">Desert quail inn</a>
-      </h2>
-      <p class="regular">
-        <span>Мотель</span> От 3000 ₽.
-      </p>
-      <a class="link detail" href="">Подробнее</a>
-      <a class="link order" href="">Забронировать</a>
-      <p class="star three">Три звезды</p>
-      <p class="regular">Рейтинг:8,9</p>
-    </article>
+      <article class="flex">
+        <img src="img/desert.jpg" width="135" height="90" alt="Фото мотеля Desert quail inn">
+        <div class="block">
+          <h2>
+            <a class="link" href="">Desert quail inn</a>
+          </h2>
+          <p class="regular">
+            <span>Мотель</span> От 3000 ₽.
+          </p>
+          <a class="link detail" href="">Подробнее</a>
+          <a class="link order" href="">Забронировать</a>
+        </div>
+        <div class="block">
+          <p class="star three">Три звезды</p>
+          <p class="regular">Рейтинг:8,9</p>
+        </div>
+      </article>
 
-    <article>
-      <img src="img/villas.jpg" width="135" height="90" alt="Фото апартаментов Villas at poco diablo">
-      <h2>
-        <a class="link" href="">Villas at poco diablo</a>
-      </h2>
-      <p class="regular">
-        <span>Апартаменты</span> ОТ 2000 ₽.
-      </p>
-      <a class="link detail" href="">Подробнее</a>
-      <a class="link order" href="">Забронировать</a>
-      <p class="stars two"> Две звезды</p>
-      <p class="regular">Рейтинг:9,5</p>
-    </article>
+      <article class="flex">
+        <img src="img/villas.jpg" width="135" height="90" alt="Фото апартаментов Villas at poco diablo">
+        <div class="block">
+          <h2>
+            <a class="link" href="">Villas at poco diablo</a>
+          </h2>
+          <p class="regular">
+            <span>Апартаменты</span> ОТ 2000 ₽.
+          </p>
+          <a class="link detail" href="">Подробнее</a>
+          <a class="link order" href="">Забронировать</a>
+        </div>
+        <div class="block">
+          <p class="stars two"> Две звезды</p>
+          <p class="regular">Рейтинг:9,5</p>
+        </div>
+      </article>
+    </div>
 
   </main>
   <footer>
     <p class="telephone">#visitsedona
-      <a class="link"href="tel:74956660266">тел:+7(495)666-02-66</a>
+      <a class="link" href="tel:74956660266">тел:+7(495)666-02-66</a>
     </p>
 
     <ul class="no-selection">
