--- a/hotels.html
+++ b/hotels.html
@@ -10,37 +10,37 @@
 </head>
 
 <body>
-  <header>
-    <nav class="navigation">
-      <ul class="no-selection">
-        <li>
-          <a class="link" href="">Информация</a>
-        </li>
-        <li>
-          <a class="link" href="">Фото и Видео</a>
-        </li>
-        <li>
-          <a class="link" href="">Карта штата</a>
-        </li>
-        <li>
-          <a class="link" href="hotels.html">Гостиницы</a>
-        </li>
-      </ul>
-      <a href="index.html">
-        <img src="img/logo-sedona.svg" width="100" height="50" alt="Лого">
-      </a>
-    </nav>
-  </header>
-  <main>
-    <h1 class="visually-hidden">Перечень мест для проживания</h1>
-    <div class="filter-widht">
-      <div class="filter">
-        <h2 class="visually-hidden">Фильтр жилья</h2>
-        <div class="block">
+  <div class="inner-page">
+    <header class="main-header">
+      <nav class="main-navigation conteiner">
+        <a class="block" href="index.html">
+          <img class="main-header-logo" src="img/logo-sedona.svg" width="100" height="50" alt="Лого">
+        </a>
+        <ul class="without-bullets site-navigation">
+          <li class="nav-list">
+            <a class="link" href="">Информация</a>
+          </li>
+          <li class="nav-list">
+            <a class="link" href="">Фото и Видео</a>
+          </li>
+          <li class="nav-list">
+            <a class="link right" href="">Карта штата</a>
+          </li>
+          <li class="nav-list">
+            <a class="link right" href="hotels.html">Гостиницы</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1 class="visually-hidden">Перечень мест для проживания</h1>
+      <div class="filter-widht">
+        <div class="filter">
+          <h2 class="visually-hidden">Фильтр жилья</h2>
           <form class="user" method="get" action="https://echo.htmlacademy.ru">
             <fieldset class="no-border ">
               <legend>Инфраструктура:</legend>
-              <ul class="no-selection">
+              <ul class="without-bullets">
                 <li>
                   <input type="checkbox" name="pool" id="inf-pool" value="pool" checked>
                   <label for="inf-pool">Бассейн</label>
@@ -55,138 +55,146 @@
                 </li>
               </ul>
             </fieldset>
+
+            <fieldset class="no-border">
+              <legend>Тип жилья:</legend>
+              <ul class="without-bullets">
+                <li>
+                  <input type="checkbox" name="hotel" id="type-hotel" value="hotel" checked>
+                  <label for="type-hotel">Гостиница</label>
+                </li>
+                <li>
+                  <input type="checkbox" name="motel" id="type-motel" value="motel" checked>
+                  <label for="type-motel">Мотель</label>
+                </li>
+                <li>
+                  <input type="checkbox" name="apartments" id="type-apartments" value="apartments" checked>
+                  <label for="type-apartments">Апартаменты</label>
+                </li>
+              </ul>
+            </fieldset>
+
+            <fieldset class="no-border">
+              <legend>Стоимость в сутки(₽)</legend>
+              <label for="flying">От 0 | до</label>
+              <output for="flying" name="level">0</output>
+              <input name="flevel" id="flying" type="range" min="0" max="5000" value="0">
+
+            </fieldset>
+            <button type="submit">Показать</button>
+
+          </form>
         </div>
 
-        <div class="block">
-          <fieldset class="no-border block">
-            <legend>Тип жилья:</legend>
-            <ul class="no-selection">
-              <li>
-                <input type="checkbox" name="hotel" id="type-hotel" value="hotel" checked>
-                <label for="type-hotel">Гостиница</label>
-              </li>
-              <li>
-                <input type="checkbox" name="motel" id="type-motel" value="motel" checked>
-                <label for="type-motel">Мотель</label>
-              </li>
-              <li>
-                <input type="checkbox" name="apartments" id="type-apartments" value="apartments" checked>
-                <label for="type-apartments">Апартаменты</label>
-              </li>
-            </ul>
-          </fieldset>
+        <div class="flex">
+          <p>Cортировка:</p>
+          <ul class="without-bullets flex">
+            <li>
+              <a class="link" href="">По цене</a>
+            </li>
+            <li>
+              <a class="link" href="">По типу</a>
+            </li>
+            <li>
+              <a class="link" href="">По рейтингу</a>
+            </li>
+          </ul>
+          <a class="link" href="" aria-label="вверх по списку"></a>
+          <a class="link" href="" aria-label="вниз по списку"></a>
         </div>
 
+        <div class="resting-kind">
+          <article class="rest">
+            <div class="art-section">
+              <div class="images">
+                <img src="img/amara.jpg" width="135" height="90" alt="Фото гостиницы Amara resort & spa">
+              </div>
+              <div>
+                <h2>
+                  <a class="link" href="">Amara resort & spa</a>
+                </h2>
+                <p class="regular">
+                  <span>Гостиница</span> От 4000 ₽.
+                </p>
+                <a class="link detail" href="">Подробнее</a>
+                <a class="link order" href="">Забронировать</a>
+              </div>
+            </div>
+            <div class="raiting">
+              <p class="stars four">Четыре звезды</p>
+              <p class="regular">Рейтинг:8,5</p>
+            </div>
+          </article>
 
-        <div class="block">
-          <fieldset class="no-border block">
-            <legend>Стоимость в сутки(₽)</legend>
-            <label for="flying">От 0 | до</label>
-            <output for="flying" name="level">0</output>
-            <input name="flevel" id="flying" type="range" min="0" max="5000" value="0">
+          <article class="rest">
+            <div class="art-section">
+              <div class="images">
+                <img src="img/desert.jpg" width="135" height="90" alt="Фото мотеля Desert quail inn">
+              </div>
+              <div>
+                <h2>
+                  <a class="link" href="">Desert quail inn</a>
+                </h2>
+                <p class="regular">
+                  <span>Мотель</span> От 3000 ₽.
+                </p>
+                <a class="link detail" href="">Подробнее</a>
+                <a class="link order" href="">Забронировать</a>
+              </div>
+            </div>
 
-          </fieldset>
-          <button type="submit">Показать</button>
+            <div class="raiting">
+              <p class="star three">Три звезды</p>
+              <p class="regular">Рейтинг:8,9</p>
+            </div>
+          </article>
+
+          <article class="rest">
+            <div class="art-section">
+              <div class="images">
+                <img src="img/villas.jpg" width="135" height="90" alt="Фото апартаментов Villas at poco diablo">
+              </div>
+              <div>
+                <h2>
+                  <a class="link" href="">Villas at poco diablo</a>
+                </h2>
+                <p class="regular">
+                  <span>Апартаменты</span> ОТ 2000 ₽.
+                </p>
+                <a class="link detail" href="">Подробнее</a>
+                <a class="link order" href="">Забронировать</a>
+              </div>
+            </div>
+            <div class="raiting">
+              <p class="stars two"> Две звезды</p>
+              <p class="regular">Рейтинг:9,5</p>
+            </div>
+          </article>
         </div>
-      </div>
-      </form>
-    </div>
 
-    <div class="flex">
-      <p>Cортировка:</p>
-      <ul class="no-selection flex">
+    </main>
+    <footer>
+      <p class="telephone">#visitsedona
+        <a class="link" href="tel:74956660266">тел:+7(495)666-02-66</a>
+      </p>
+
+      <ul class="without-bullets">
         <li>
-          <a class="link" href="">По цене</a>
+          <a class="link twitter" href="" aria-label="Твиттер"></a>
         </li>
         <li>
-          <a class="link" href="">По типу</a>
+          <a class="link facebook" href="" aria-label="Фейсбук"></a>
         </li>
         <li>
-          <a class="link" href="">По рейтингу</a>
+          <a class="link youtube" href="" aria-label="Ютуб"></a>
         </li>
       </ul>
-      <a class="link" href="" aria-label="вверх по списку"></a>
-      <a class="link" href="" aria-label="вниз по списку"></a>
-    </div>
 
-    <div class="rest">
-      <article class="flex">
-        <img src="img/amara.jpg" width="135" height="90" alt="Фото гостиницы Amara resort & spa">
-        <div class="block">
-          <h2>
-            <a class="link" href="">Amara resort & spa</a>
-          </h2>
-          <p class="regular">
-            <span>Гостиница</span> От 4000 ₽.
-          </p>
-          <a class="link detail" href="">Подробнее</a>
-          <a class="link order" href="">Забронировать</a>
-        </div>
-        <div class="block">
-          <p class="stars four">Четыре звезды</p>
-          <p class="regular">Рейтинг:8,5</p>
-        </div>
-      </article>
-
-      <article class="flex">
-        <img src="img/desert.jpg" width="135" height="90" alt="Фото мотеля Desert quail inn">
-        <div class="block">
-          <h2>
-            <a class="link" href="">Desert quail inn</a>
-          </h2>
-          <p class="regular">
-            <span>Мотель</span> От 3000 ₽.
-          </p>
-          <a class="link detail" href="">Подробнее</a>
-          <a class="link order" href="">Забронировать</a>
-        </div>
-        <div class="block">
-          <p class="star three">Три звезды</p>
-          <p class="regular">Рейтинг:8,9</p>
-        </div>
-      </article>
-
-      <article class="flex">
-        <img src="img/villas.jpg" width="135" height="90" alt="Фото апартаментов Villas at poco diablo">
-        <div class="block">
-          <h2>
-            <a class="link" href="">Villas at poco diablo</a>
-          </h2>
-          <p class="regular">
-            <span>Апартаменты</span> ОТ 2000 ₽.
-          </p>
-          <a class="link detail" href="">Подробнее</a>
-          <a class="link order" href="">Забронировать</a>
-        </div>
-        <div class="block">
-          <p class="stars two"> Две звезды</p>
-          <p class="regular">Рейтинг:9,5</p>
-        </div>
-      </article>
-    </div>
-
-  </main>
-  <footer>
-    <p class="telephone">#visitsedona
-      <a class="link" href="tel:74956660266">тел:+7(495)666-02-66</a>
-    </p>
-
-    <ul class="no-selection">
-      <li>
-        <a class="link twitter" href="" aria-label="Твиттер"></a>
-      </li>
-      <li>
-        <a class="link facebook" href="" aria-label="Фейсбук"></a>
-      </li>
-      <li>
-        <a class="link youtube" href="" aria-label="Ютуб"></a>
-      </li>
-    </ul>
-
-    <p class="academy-link">website by
-      <a class="link" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Ссылка на академию"></a>
-    </p>
-  </footer>
+      <p class="academy-link">website by
+        <a class="link" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Ссылка на академию"></a>
+      </p>
+    </footer>
+  </div>
 </body>
 
 </html>
