--- a/index.html
+++ b/index.html
@@ -9,160 +9,160 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body class="inner-page">
-  <header>
-    <nav class="navigetion">
-      <ul class="no-selection nav">
-        <li>
-          <a class="link block" href="">Информация</a>
-        </li>
-        <li>
-          <a class="link block" href="">Фото и Видео</a>
-        </li>
-        <li>
-          <a class="link block chain" href="">Карта штата</a>
-        </li>
-        <li>
-          <a class="link block chain" href="hotels.html">Гостиницы</a>
-        </li>
-      </ul>
-      <a class="block" href="index.html">
-        <img class="logo" src="img/logo-sedona.svg" width="100" height="50" alt="Лого">
-      </a>
-    </nav>
-  </header>
-  <main>
-    <div class="intro">
-      <img src="img/intro-welcome.svg" width="459" height="353" alt="Приветствие">
-    </div>
+<body>
+  <div class="inner-page">
+    <header class="main-header">
+      <nav class="main-navigation conteiner">
+        <a class="block" href="index.html">
+          <img class="main-header-logo" src="img/logo-sedona.svg" width="100" height="50" alt="Лого">
+        </a>
+        <ul class="without-bullets site-navigation">
+          <li class="nav-list">
+            <a class="link" href="">Информация</a>
+          </li>
+          <li class="nav-list">
+            <a class="link" href="">Фото и Видео</a>
+          </li>
+          <li class="nav-list">
+            <a class="link right" href="">Карта штата</a>
+          </li>
+          <li class="nav-list">
+            <a class="link right" href="hotels.html">Гостиницы</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="intro">
+        <img src="img/intro-welcome.svg" width="459" height="353" alt="Приветствие">
+      </div>
 
-    <div class="heading">
-      <h1 class="main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-      <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-    </div>
+      <div class="heading">
+        <h1 class="main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      </div>
 
-    <section class="content">
-      <h2 class="visually-hidden">Преимущесва</h2>
-      <ul class="no-selection">
-        <li>
-          <div class="flex">
-            <div class="marked">
-              <h3 class="reason-title">Настоящий городок</h3>
-              <p class="regular">-№1-</p>
-              <p class="regular">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-            </div>
-            <img class="img-reason" src="img/real-city.jpg" width="800" height="400" alt="Фото города Седона">
+      <section class="content">
+        <h2 class="visually-hidden">Преимущесва</h2>
+        <ul class="without-bullets">
+          <li>
+            <div class="reason">
+              <div class="marked">
+                <h3 class="reason-title">Настоящий городок</h3>
+                <p class="regular">-№1-</p>
+                <p class="regular">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+              </div>
+              <img class="img-reason" src="img/real-city.jpg" width="800" height="400" alt="Фото города Седона">
+            </div class="reason">
+            <ul class="without-bullets reason">
+              <li class="nested-list">
+                <h3 class="reason-title home">Жильё</h3>
+                <p class="regular">Рекомендуем пожить в настоящем мотеле, всё как в кино</p>
+              </li>
+              <li class="nested-list">
+                <h3 class="reason-title food">Еда</h3>
+                <p class="regular">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              </li>
+              <li class="nested-list ">
+                <h3 class="reason-title suvenir">Сувениры</h3>
+                <p class="regular">Не только китайского, но и местного производства!</p>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <div class="reason">
+              <img class="img-reason" src="img/devil-canyon.jpg" width="800" height="400" alt="Фото дьявольского моста">
+              <div class="marked">
+                <h3 class="reason-title">Там есть<br> мост дьявола</h3>
+                <p class="regular">-№2-</p>
+                <p class="regular">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+              </div>
+          </li>
+          <div class="reason">
+            <li class="other-reasons">
+              <h3 class="reason-title">Небольшая площадь</h3>
+              <p class="regular">-№3-</p>
+              <p class="regular">Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="other-reasons">
+              <h3 class="reason-title">Красивая дорога</h3>
+              <p class="regular">-№4-</p>
+              <p class="regular">Ехать в седону из лас-вегаса совсем не скучно!</p>
+            </li>
+            <li class="other-reasons">
+              <h3 class="reason-title">Мало туристов</h3>
+              <p class="regular">-№5-</p>
+              <p class="regular">Большинство едет в гранд каньон и толпится там</p>
+            </li>
           </div>
-          <ul class="no-selection flex">
-            <li class="nested-list">
-              <h3 class="reason-title">Жильё</h3>
-              <p class="regular">Рекомендуем пожить в настоящем мотеле, всё как в кино</p>
-            </li>
-            <li class="nested-list">
-              <h3 class="reason-title">Еда</h3>
-              <p class="regular">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-            </li>
-            <li class="nested-list">
-              <h3 class="reason-title">Сувениры</h3>
-              <p class="regular">Не только китайского, но и местного производства!</p>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <div class="flex">
-            <div class="marked">
-              <h3 class="reason-title">Там есть<br> мост дьявола</h3>
-              <p class="regular">-№2-</p>
-              <p class="regular">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-            </div>
-            <img class="img-reason second" src="img/devil-canyon.jpg" width="800" height="400"
-              alt="Фото дьявольского моста">
-          </div>
-        </li>
-        <div class="flex">
-          <li class="other-reasons">
-            <h3 class="reason-title">Небольшая площадь</h3>
-            <p class="regular">-№3-</p>
-            <p class="regular">Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="other-reasons">
-            <h3 class="reason-title">Красивая дорога</h3>
-            <p class="regular">-№4-</p>
-            <p class="regular">Ехать в седону из лас-вегаса совсем не скучно!</p>
-          </li>
-          <li class="other-reasons">
-            <h3 class="reason-title">Мало туристов</h3>
-            <p class="regular">-№5-</p>
-            <p class="regular">Большинство едет в гранд каньон и толпится там</p>
-          </li>
-        </div>
-      </ul>
-    </section>
+        </ul>
+      </section>
 
-    <div>
-      <p>Заинтересовались?</p>
-      <p class="regular">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в седоне
-      </p>
-    </div>
-
-    <div>
-      <button class="search" type="button">Поиск гостиницы в Седоне</button>
-      <form class="user none" method="get" action="https://echo.htmlacademy.ru">
-        <p>
-          <label for="date-in">Дата заезда</label>
-          <input type="text" id="date-in" name="in" placeholder="2017-04-22">
-          <button type="button" aria-label="Календарь для даты заезда"></button>
+      <div>
+        <p>Заинтересовались?</p>
+        <p class="regular">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в седоне
         </p>
-        <p>
-          <label for="date-out">Дата выезда</label>
-          <input type="text" id="date-out" placeholder="2017-07-04">
-          <button type="button" aria-label="Календарь для даты выезда"></button>
+      </div>
+
+      <div>
+        <button class="search" type="button">Поиск гостиницы в Седоне</button>
+        <form class="user none" method="get" action="https://echo.htmlacademy.ru">
+          <p>
+            <label for="date-in">Дата заезда</label>
+            <input type="text" id="date-in" name="in" placeholder="2017-04-22">
+            <button type="button" aria-label="Календарь для даты заезда"></button>
+          </p>
+          <p>
+            <label for="date-out">Дата выезда</label>
+            <input type="text" id="date-out" placeholder="2017-07-04">
+            <button type="button" aria-label="Календарь для даты выезда"></button>
+          </p>
+          <p>
+            <label for="sum-adults">Взрослые</label>
+            <button type="button" aria-label="Уменьшение кол-ва взрослых">-</button>
+            <input type="text" id="sum-adults" name="adults" placeholder="2">
+            <button type="button" aria-label="Увеличение кол-ва взрослых">+</button>
+
+            <label for="sum-child">Дети</label>
+            <button type="button" aria-label="Уменьшение кол-ва детей">-</button>
+            <input type="text" id="sum-child" name="child" placeholder="0">
+            <button type="button" aria-label="Увеличение кол-ва детей">+</button>
+
+          </p>
+          <button type="submit">Найти</button>
+        </form>
+      </div>
+
+      <div>
+        <img class="map" src="img/map.jpg" width="1400" height="750" alt="Карта">
+        <!-- меньше весит картинка и там не так много цветов-->
+      </div>
+
+    </main>
+    <footer>
+      <div class="">
+        <p class="telephone ">#visitsedona
+          <a class="link" href="tel:74956660266">тел:+7(495)666-02-66</a>
         </p>
-        <p>
-          <label for="sum-adults">Взрослые</label>
-          <button type="button" aria-label="Уменьшение кол-ва взрослых">-</button>
-          <input type="text" id="sum-adults" name="adults" placeholder="2">
-          <button type="button" aria-label="Увеличение кол-ва взрослых">+</button>
 
-          <label for="sum-child">Дети</label>
-          <button type="button" aria-label="Уменьшение кол-ва детей">-</button>
-          <input type="text" id="sum-child" name="child" placeholder="0">
-          <button type="button" aria-label="Увеличение кол-ва детей">+</button>
+        <ul class="without-bullets social-link">
+          <li>
+            <a class="link twitter" href="" aria-label="Твиттер"></a>
+          </li>
+          <li>
+            <a class="link facebook" href="" aria-label="Фейсбук"></a>
+          </li>
+          <li>
+            <a class="link youtube" href="" aria-label="Ютуб"></a>
+          </li>
+        </ul>
 
+        <p class="academy-link block">website by
+          <a class="link" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Ссылка на академию"></a>
         </p>
-        <button type="submit">Найти</button>
-      </form>
-    </div>
-
-    <div>
-      <img class="map" src="img/map.jpg" width="1400" height="750" alt="Карта">
-      <!-- меньше весит картинка и там не так много цветов-->
-    </div>
-
-  </main>
-  <footer>
-    <div class="flex">
-      <p class="telephone block">#visitsedona
-        <a class="link" href="tel:74956660266">тел:+7(495)666-02-66</a>
-      </p>
-
-      <ul class="no-selection block">
-        <li>
-          <a class="link twitter" href="" aria-label="Твиттер"></a>
-        </li>
-        <li>
-          <a class="link facebook" href="" aria-label="Фейсбук"></a>
-        </li>
-        <li>
-          <a class="link youtube" href="" aria-label="Ютуб"></a>
-        </li>
-      </ul>
-
-      <p class="academy-link block">website by
-        <a class="link" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Ссылка на академию"></a>
-      </p>
-    </div>
-  </footer>
+      </div>
+    </footer>
+  </div>
 </body>
 
 </html>
