--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <div class="page-conteiner">
     <header class="main-header">
-      <nav class="main-navigation conteiner">
-        <a class="block" href="index.html">
+      <nav class="main-navigation-conteiner">
+        <a href="index.html">
           <img class="main-header-logo" src="img/logo-sedona.svg" width="100" height="50" alt="Лого">
         </a>
         <ul class="without-bullets site-navigation">
