Рейнджи, общий класс,убрано правило

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         </a>
         <ul class="without-bullets site-navigation">
           <li class="nav-item">
-            <a class="link link-left" href="">Информация</a>
+            <a class="link" href="">Информация</a>
           </li>
           <li class="nav-item">
-            <a class="link link-left" href="">Фото и Видео</a>
+            <a class="link" href="">Фото и Видео</a>
           </li>
           <li class="nav-item">
-            <a class="link link-right" href="">Карта штата</a>
+            <a class="link" href="">Карта штата</a>
           </li>
           <li class="nav-item">
-            <a class="link link-right" href="hotels.html">Гостиницы</a>
+            <a class="link" href="hotels.html">Гостиницы</a>
           </li>
         </ul>
       </nav>
@@ -56,15 +56,15 @@
             </div>
             <ul class="without-bullets reason">
               <li class="nested-list">
-                <h3 class="reason-title home">Жильё</h3>
+                <h3 class="reason-title sub-reasons home">Жильё</h3>
                 <p>Рекомендуем пожить в настоящем мотеле, всё как в кино</p>
               </li>
               <li class="nested-list">
-                <h3 class="reason-title food">Еда</h3>
+                <h3 class="reason-title sub-reasons food">Еда</h3>
                 <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
               </li>
               <li class="nested-list ">
-                <h3 class="reason-title souvenir">Сувениры</h3>
+                <h3 class="reason-title sub-reasons souvenir">Сувениры</h3>
                 <p>Не только китайского, но и местного производства!</p>
               </li>
             </ul>
