--- a/hotels.html
+++ b/hotels.html
@@ -13,8 +13,9 @@
   <div class="page-container">
     <header class="main-header">
       <nav class="navigation-container">
-        <a href="index.html">
-          <img class="main-header-logo" src="img/logo-sedona.svg" width="100" height="50" alt="Лого">
+        <a class="logo" href="index.html">
+          <img class="logo-image" src="img/logo-sedona.svg" width="100" height="50"
+            alt="город Седонна логотип">
         </a>
         <ul class="without-bullets site-navigation">
           <li class="nav-item">
