--- a/hotels.html
+++ b/hotels.html
@@ -90,8 +90,8 @@
                 <div class="scale">
                   <div class="bar"></div>
                 </div>
-                <button type="button" class="range-toggle range-toggle-min">
-                  <button type="button" class="range-toggle range-toggle-max">
+                <button type="button" class="range-toggle range-toggle-min"></button>
+                <button type="button" class="range-toggle range-toggle-max"></button>
               </div>
               <button class="btn-transparent" type="submit">Показать</button>
             </div>
@@ -99,8 +99,8 @@
         </div>
       </div>
       <div class="sort">
-        <h3>Найдено:</h3>
-        <p> Cортировка:</p>
+        <p class="sort-find">Найдено:3</p>
+        <p class="sort-transfer">Cортировка:</p>
         <ul class="without-bullets typical-sorting">
           <li>
             <a class="link" href="">По цене</a>
@@ -112,8 +112,10 @@
             <a class="link" href="">По рейтингу</a>
           </li>
         </ul>
-        <a class=" sort-button up-button" href="" aria-label="вверх по списку"></a>
-        <a class=" sort-button down-button" href="" aria-label="вниз по списку"></a>
+        <div class="sort-button-container">
+          <a class=" sort-button up-button" href="" aria-label="вверх по списку"></a>
+          <a class=" sort-button down-button" href="" aria-label="вниз по списку"></a>
+        </div>
       </div>
       <div class="resting-kind">
         <article class="resting-place">
