--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <header class="main-header">
       <nav class="navigation-container">
         <a class="logo" href="index.html">
-          <img class="logo-image" src="img/logo-sedona.svg" width="100" height="50"
-            alt="город Седонна логотип">
+          <img class="logo-image" src="img/logo-sedona.svg" width="100" height="50" alt="город Седонна логотип">
         </a>
         <ul class="without-bullets site-navigation">
           <li class="nav-item">
